--- a/.htaccess
+++ b/.htaccess
@@ -113,7 +113,7 @@ DirectoryIndex index.php index.html index.htm
   RewriteCond %{REQUEST_METHOD} !^(GET|HEAD)$ [OR]
   RewriteCond %{REQUEST_URI} (^/(admin|cache|misc|modules|sites|system|openid|themes|node/add|comment/reply))|(/(edit|user|user/(login|password|register))$) [OR]
   RewriteCond %{HTTPS} on [OR]
-  RewriteCond %{HTTP_COOKIE} DRUPAL_UID
+  RewriteCond %{HTTP_COOKIE} DRUPAL_UID [OR]
   RewriteCond %{HTTP:Pragma} no-cache [OR]
   RewriteRule .* - [S=3]
 
