Theme: gbifwhite2012 and gbif_blocks for cosmetic purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ sites/all/modules/contrib/examples/
 sites/10088.npt.bkolocal/
 sites/10088.tools.bkolocal/
 sites/all/themes/gbif2012/
+dummy.php
+.DS_Store
+sites/all/modules/custom/feeds_xls/PHPExcel/
